--- a/_extensions/hubchev/apaquarto/_extension.yml
+++ b/_extensions/hubchev/apaquarto/_extension.yml
@@ -38,7 +38,7 @@ contributes:
       suppress-corresponding-email: false
       suppress-abstract: false
       suppress-keywords: false
-      suppress-title-introduction: false
+      suppress-title-introduction: true
       no-ampersand-parenthetical: false
       language: 
         citation-last-author-separator: "und"
@@ -132,6 +132,8 @@ contributes:
       hyperrefoptions: 
         - linktoc=none
       block-headings: false
+      indent-skip-first: false
+      indent-skip-all: false
       template: apatemplate.tex
       mainfontfallback: Arial
       template-partials:
